add_subdirectory(acc_get_x)
add_subdirectory(acc_get_y)
add_subdirectory(acc_get_z)
add_subdirectory(acc_set_x)
add_subdirectory(acc_set_y)
add_subdirectory(acc_set_z)
add_subdirectory(deinit)
add_subdirectory(get_dev)
add_subdirectory(get_pwr_mode_conf)
add_subdirectory(gyr_get_x)
add_subdirectory(gyr_get_y)
add_subdirectory(gyr_get_z)
add_subdirectory(gyr_set_x)
add_subdirectory(gyr_set_y)
add_subdirectory(gyr_set_z)
add_subdirectory(temp_get)
add_subdirectory(temp_set)
add_subdirectory(time_get)
add_subdirectory(time_read)
add_subdirectory(time_set)
