add_subdirectory(acc_get_x)
add_subdirectory(acc_get_y)
add_subdirectory(acc_get_z)
add_subdirectory(acc_read)
add_subdirectory(acc_set_x)
add_subdirectory(acc_set_y)
add_subdirectory(acc_set_z)
add_subdirectory(acc_slf_tst)
add_subdirectory(deinit)
add_subdirectory(dev_get)
add_subdirectory(gyr_get_x)
add_subdirectory(gyr_get_y)
add_subdirectory(gyr_get_z)
add_subdirectory(gyr_read)
add_subdirectory(gyr_set_x)
add_subdirectory(gyr_set_y)
add_subdirectory(gyr_set_z)
#add_subdirectory(gyr_slf_tst)
#add_subdirectory(init)
#add_subdirectory(pwr_mode_get_conf)
#add_subdirectory(pwr_mode_set)
#add_subdirectory(temp_get)
#add_subdirectory(temp_read)
#add_subdirectory(temp_set)
#add_subdirectory(time_get)
#add_subdirectory(time_read)
#add_subdirectory(time_set)
#add_subdirectory(soft_rst)
#add_subdirectory(spi_ctrl_asg)
#add_subdirectory(stat_get)
#add_subdirectory(stat_set)
